Update 'python-bwvywnbe' component image to: quay.io/rhtap-test-organization-jk/python-bwvywnbe:d2fb01b83efac4c3e10a3a056353ed9b896258c2@sha256:9d0911a5f1546f78da3ccfcd28e0b4cb9cb3c6966ed86042c72bdd378e3d268d

--- a/components/python-bwvywnbe/overlays/development/deployment-patch.yaml
+++ b/components/python-bwvywnbe/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: python-bwvywnbe
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap-test-organization-jk/python-bwvywnbe:d2fb01b83efac4c3e10a3a056353ed9b896258c2@sha256:9d0911a5f1546f78da3ccfcd28e0b4cb9cb3c6966ed86042c72bdd378e3d268d
+          name: container-image
